Add Cloudflare Web Analytics tracking
Integrate Cloudflare Web Analytics for privacy-focused visitor tracking.
No cookies, GDPR compliant by default.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <!-- Additional SEO -->
       <meta name="author" content="Iðunn Garðarsdóttir" />
       <link rel="canonical" href="https://idunn.is/" />
+
+      <!-- Cloudflare Web Analytics -->
+      <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2d85bd89515b4954904a20a6527c8e05"}'></script>
+      <!-- End Cloudflare Web Analytics -->
     </head>
 
     <body>
